--- a/orca.html
+++ b/orca.html
@@ -46,32 +46,52 @@
           </nav>
         </div>
       </header>
-      <section class="o-section" data-theme="gray">
+      <section class="o-section" data-theme="gray" id="welcome">
         <div class="o-wrapper">
-          <h1 class="c-section_headding js-scrollUp"><small class="c-section_headding-indicator">Somos, un estudio de diseño Colombiano.</small>
-            <div class="c-section_headding-separador"></div><span class="c-section_headding-enfasis">Creamos</span> productos digitales y marcas del futuro.
+          <h1 class="c-section_headding js-scrollUp"><small class="c-section_headding-indicator"></small>
+            <div class="c-section_headding-separador"></div><span class="c-section_headding-enfasis">Proyecto</span> orca
           </h1>
+          <blockquote class="c-welcome_message">
+            <p>
+              Rediseño de marca, estrategía comunicación,
+              plan de social media, packaging discografía y
+              elementos de mercadeo.
+            </p>
+            <div class="c-welcome_details">
+              <div><strong>Industria: </strong><span>Musical</span></div>
+              <div><strong>Año: </strong><span>2015</span></div>
+            </div>
+          </blockquote>
         </div>
         <div class="o-mega_headding-wrapper">
           <div class="o-mega_headding js-mega_headding">CubioStudio</div>
         </div>
-        <div class="o-wrapper">
+        <div class="o-wrapper cont-multimedia">
           <div class="c-multimedia" data-square="multimedia" data-shadow="true">
             <video class="c-multimedia_video" controls="controls" poster="./images/projects/slider/1.jpg">
-              <source src="unit_unit/module_module/assets/videos/audioname.mp4" type="video/mp4"/>Your browser does not support the video element.
+              <source src="multimedia/videos/orca/reel.mp4" type="video/mp4"/>Your browser does not support the video element.
             </video>
           </div>
         </div>
       </section>
-      <section class="o-section" data-theme="gold" id="record"></section>
+      <section class="o-section" data-theme="light" id="record"></section>
       
       <footer class="o-footer">
         <div class="o-wrapper">
           <div class="c-contact_footer">
-            <label for=""><a class="js-link" style="color: var(--color-a);" href="mailto:harley.santos.garzon@gmail.com">hello@cubiostudio.com</a></label>
-            <label for=""><a class="js-link" style="color: var(--color-a)" href="tel:+350 5099 220">350 5099 220</a></label>
-            <hr style="width: 100%"/>
-            <label for="">Bogotá D.C, Colombia</label><small>&copy; 2019 cubio studio</small>
+            <div class="c-contact_footer_item"><a class="js-link" href="mailto:harley.santos.garzon@gmail.com">hello@cubiostudio.com</a></div>
+            <div class="c-contact_footer_item">
+              <label for=""><a class="js-link" href="tel:+350 5099 220">350 5099 220</a></label>
+            </div>
+            <div class="c-contact_footer_item">
+              <label for=""><a class="js-link" taget="_blank" href="https://www.instagram.com/cubioStudio/">instagram</a></label>
+              <label for=""><a class="js-link" taget="_blank" href="https://www.behance.net/HarleySantosGarzon">behance</a></label>
+              <label for=""><a class="js-link" taget="_blank" href="https://github.com/HarleySG/">github</a></label>
+            </div>
+            <div class="c-contact_footer_item">
+              <hr style="width: 100%"/>
+              <label for="">Bogotá D.C, Colombia</label><small>&copy; 2019 cubio studio</small>
+            </div>
           </div>
         </div>
       </footer>
