--- a/orca.html
+++ b/orca.html
@@ -64,18 +64,60 @@
           </blockquote>
         </div>
         <div class="o-mega_headding-wrapper">
-          <div class="o-mega_headding js-mega_headding">CubioStudio</div>
+          <div class="o-mega_headding js-mega_headding">ProyectoOrca</div>
         </div>
-        <div class="o-wrapper cont-multimedia">
-          <div class="c-multimedia" data-square="multimedia" data-shadow="true">
-            <video class="c-multimedia_video" controls="controls" poster="./images/projects/slider/1.jpg">
-              <source src="multimedia/videos/orca/reel.mp4" type="video/mp4"/>Your browser does not support the video element.
-            </video>
+      </section>
+      <section class="o-section" data-theme="light" id="record">
+        <div class="o-wrapper">
+          <div class="cont-multimedia">
+            <div class="c-multimedia" data-square="multimedia" data-shadow="true">
+              <video class="c-multimedia_video" controls="controls" poster="./images/projects/slider/1.jpg">
+                <source src="multimedia/videos/orca/reel.mp4" type="video/mp4"/>Your browser does not support the video element.
+              </video>
+            </div>
           </div>
         </div>
       </section>
-      <section class="o-section" data-theme="light" id="record"></section>
-      
+      <section class="o-section" data-theme="light" id="preview">
+        <div class="o-wrapper">
+          <h1 class="c-section_headding js-scrollUp"><small class="c-section_headding-indicator">Inicio,  lo que nos trajo aquí.</small>
+            <div class="c-section_headding-separador"></div><span class="c-section_headding-enfasis">Sobre</span> proyecto orca.
+          </h1>
+        </div>
+        <div class="o-wrapper"><img src="images/projects/orca/orca_preview.png" alt=""/></div>
+      </section>
+      <section class="o-section" data-theme="gold" id="proposal">
+        <div class="o-wrapper">
+          <h1 class="c-section_headding js-scrollUp"><small class="c-section_headding-indicator">Horizonte, lo que quisimos lograr.</small>
+            <div class="c-section_headding-separador"></div><span class="c-section_headding-enfasis">Propuesta</span> de marca.
+          </h1>
+        </div>
+        <div class="o-wrapper"><img src="images/projects/orca/orca_proposal.png" alt=""/></div>
+      </section>
+      <section class="o-section" data-theme="gray" id="objectives">
+        <div class="o-wrapper">
+          <h1 class="c-section_headding js-scrollUp"><small class="c-section_headding-indicator">Norte, objetivos a cumplir.</small>
+            <div class="c-section_headding-separador"></div><span class="c-section_headding-enfasis">Proposito</span> rebranding.
+          </h1>
+        </div>
+        <div class="o-wrapper"><img src="images/projects/orca/orca_proposito_rebranding.png" alt="" draggable="false"/></div>
+      </section>
+      <section class="o-section" data-theme="light" id="isotipo">
+        <div class="o-wrapper">
+          <h1 class="c-section_headding js-scrollUp"><small class="c-section_headding-indicator">Aspectos visuales.</small>
+            <div class="c-section_headding-separador"></div><span class="c-section_headding-enfasis">Abstracción</span> 
+          </h1>
+        </div>
+        <div class="o-wrapper"><img src="images/projects/orca/orca_isotipo.png" alt="" draggable="false"/></div>
+      </section>
+      <section class="o-section" data-theme="dark" id="tipografia">
+        <div class="o-wrapper">
+          <h1 class="c-section_headding js-scrollUp"><small class="c-section_headding-indicator">Aspectos visuales.</small>
+            <div class="c-section_headding-separador"></div><span class="c-section_headding-enfasis">Tipografía</span> 
+          </h1>
+        </div>
+        <div class="o-wrapper"><img src="images/projects/orca/orca_tipografia.png" alt="" draggable="false"/></div>
+      </section>
       <footer class="o-footer">
         <div class="o-wrapper">
           <div class="c-contact_footer">
