--- a/orca.html
+++ b/orca.html
@@ -67,7 +67,7 @@
           <div class="o-mega_headding js-mega_headding">ProyectoOrca</div>
         </div>
       </section>
-      <section class="o-section" data-theme="light" id="record">
+      <section class="o-section" data-theme="gray" id="record">
         <div class="o-wrapper">
           <div class="cont-multimedia">
             <div class="c-multimedia" data-square="multimedia" data-shadow="true">
