--- a/orca.html
+++ b/orca.html
@@ -38,9 +38,10 @@
             </button>
             <ul class="o-menu_options">
               <li class="o-menu_options-item js-menu"><a class="o-menu_options-link" href="./">inicio</a></li>
-              <li class="o-menu_options-item js-menu"><a class="o-menu_options-link" href="#about">nosotros</a></li>
-              <li class="o-menu_options-item js-menu"><a class="o-menu_options-link" href="#works">trabajos</a></li>
-              <li class="o-menu_options-item js-menu"><a class="o-menu_options-link" href="#enfoque">enfoque</a></li>
+              <li class="o-menu_options-item js-menu"><a class="o-menu_options-link" href="#preview">marca</a></li>
+              <li class="o-menu_options-item js-menu"><a class="o-menu_options-link" href="#proposal">propuesta</a></li>
+              <li class="o-menu_options-item js-menu"><a class="o-menu_options-link" href="#objectives">objetivos</a></li>
+              <li class="o-menu_options-item js-menu"><a class="o-menu_options-link" href="#isotipo">abstracción</a></li>
               <li class="o-menu_options-item js-menu"><a class="o-menu_options-link" href="#contact">contacto</a></li>
             </ul>
           </nav>
@@ -117,6 +118,38 @@
           </h1>
         </div>
         <div class="o-wrapper"><img src="images/projects/orca/orca_tipografia.png" alt="" draggable="false"/></div>
+      </section>
+      <section class="o-section js-scrollUp" id="contact" data-theme="light">
+        <div class="o-wrapper">
+          <h2 class="u-head_section" data-name="Contacto">Contacto</h2>
+        </div>
+        <div class="o-wrapper" style="margin-top: 200px">
+          <div class="c-contact" data-square="multimedia">
+            <div class="c-contact_map">
+              <div class="c-contact_map-pin js-link"></div>
+            </div>
+            <form class="c-contact_form">
+              <div class="c-contact_form-field">
+                <label class="c-btn js-link">
+                  <input id="name" type="text" name="" placeholder="Nombre"/>
+                </label>
+              </div>
+              <div class="c-contact_form-field">
+                <label class="c-btn js-link">
+                  <input id="name" type="email" name="" placeholder="Email"/>
+                </label>
+              </div>
+              <div class="c-contact_form-field">
+                <label class="c-btn js-link">
+                  <textarea name="" cols="30" rows="10"></textarea>
+                </label>
+              </div>
+              <div class="c-contact_form-field">
+                <label class="c-btn js-link" data-position="absolute">Enviar</label>
+              </div>
+            </form>
+          </div>
+        </div>
       </section>
       <footer class="o-footer">
         <div class="o-wrapper">
