--- a/betsknate.html
+++ b/betsknate.html
@@ -170,5 +170,28 @@
     <div class="mouse-tracker"></div>
     
     <script src="./script.js"></script>
+    <script>
+      document.addEventListener('DOMContentLoaded', () => {
+          setIntersectionTo('.js-intersector', 0.3, (response) => {
+              const {status, target} = response;
+              switch (status) {
+                  case 'fadeInDown':
+                      target.dataset.view = 'fade-inDown';
+                      break;
+                  case 'fadeInUp':
+                      target.dataset.view = 'fade-inUp';
+                      break;
+                  case 'fadeOutDown':
+                      target.dataset.view = 'fade-outDown';
+                      break;
+                  case 'fadeOutUp':
+                      target.dataset.view = 'fade-outUp';
+                      break;
+                  default:
+                      break;
+              }
+          });
+      });
+    </script>
   </body>
 </html>
